--- a/luby_cash/.env.example
+++ b/luby_cash/.env.example
@@ -3,3 +3,9 @@ HOST=0.0.0.0
 NODE_ENV=development
 APP_KEY=BPYQ8wQxr2I4CqiB_y-H7B3-V_WeeDKm
 DRIVE_DISK=local
+DB_CONNECTION=pg
+PG_HOST=localhost
+PG_PORT=5432
+PG_USER=lucid
+PG_PASSWORD=
+PG_DB_NAME=lucid
