--- a/luby_cash/package.json
+++ b/luby_cash/package.json
@@ -16,6 +16,9 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-adonis": "^1.3.3",
     "eslint-plugin-prettier": "^4.0.0",
+    "execa": "^5.1.1",
+    "get-port": "^5.1.1",
+    "japa": "^3.1.1",
     "pino-pretty": "^7.0.1",
     "prettier": "^2.4.1",
     "typescript": "~4.2",
@@ -23,8 +26,12 @@
     "youch-terminal": "^1.1.1"
   },
   "dependencies": {
+    "@adonisjs/auth": "^8.0.9",
     "@adonisjs/core": "^5.3.0",
+    "@adonisjs/lucid": "^16.1.0",
     "@adonisjs/repl": "^3.1.0",
+    "luxon": "^2.0.2",
+    "pg": "^8.7.1",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.20"
