--- a/ms_validate/package.json
+++ b/ms_validate/package.json
@@ -15,5 +15,17 @@
   "bugs": {
     "url": "https://github.com/ConstaXI/LubyCash/issues"
   },
-  "homepage": "https://github.com/ConstaXI/LubyCash#readme"
+  "homepage": "https://github.com/ConstaXI/LubyCash#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "kafkajs": "^1.15.0",
+    "typescript": "^4.4.3"
+  },
+  "devDependencies": {
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "pino-pretty": "^7.0.1",
+    "prettier": "^2.4.1"
+  }
 }
