--- a/ms_validate/.eslintrc.json
+++ b/ms_validate/.eslintrc.json
@@ -1,5 +1,5 @@
 {
-  "extends": ["plugin:adonis/typescriptApp", "prettier"],
+  "extends": ["prettier"],
   "plugins": ["prettier"],
   "rules": {
     "prettier/prettier": ["error"]
