--- a/ms_validate/package.json
+++ b/ms_validate/package.json
@@ -1,7 +1,6 @@
 {
   "name": "ms_validate_new_users",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -18,14 +17,23 @@
   "homepage": "https://github.com/ConstaXI/LubyCash#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "handlebars": "^4.7.7",
     "kafkajs": "^1.15.0",
+    "nodemailer": "^6.6.5",
+    "nodemailer-express-handlebars": "^4.0.0",
+    "ts-node-dev": "^1.1.8",
     "typescript": "^4.4.3"
   },
   "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^16.10.1",
+    "@types/nodemailer": "^6.4.4",
+    "@types/nodemailer-express-handlebars": "^4.0.1",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "pino-pretty": "^7.0.1",
     "prettier": "^2.4.1"
-  }
+  },
+  "description": ""
 }
