--- a/ms_validate/package.json
+++ b/ms_validate/package.json
@@ -22,18 +22,21 @@
     "nodemailer": "^6.6.5",
     "nodemailer-express-handlebars": "^4.0.0",
     "ts-node-dev": "^1.1.8",
-    "typescript": "^4.4.3"
+    "typescript": "^4.4.3",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^16.10.1",
     "@types/nodemailer": "^6.4.4",
     "@types/nodemailer-express-handlebars": "^4.0.1",
+    "@types/uuid": "^8.3.1",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "pino-pretty": "^7.0.1",
-    "prettier": "^2.4.1"
+    "prettier": "^2.4.1",
+    "typeorm": "^0.2.37"
   },
   "description": ""
 }
