--- a/luby_cash/package.json
+++ b/luby_cash/package.json
@@ -30,6 +30,7 @@
     "@adonisjs/core": "^5.3.0",
     "@adonisjs/lucid": "^16.1.0",
     "@adonisjs/repl": "^3.1.0",
+    "kafkajs": "^1.15.0",
     "luxon": "^2.0.2",
     "pg": "^8.7.1",
     "phc-argon2": "^1.1.2",
