--- a/ms_validate/package.json
+++ b/ms_validate/package.json
@@ -35,8 +35,6 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "pino-pretty": "^7.0.1",
-    "prettier": "^2.4.1",
-    "typeorm": "^0.2.37"
-  },
-  "description": ""
+    "prettier": "^2.4.1"
+  }
 }
