fix: ioc containers

--- a/luby_cash/.env.example
+++ b/luby_cash/.env.example
@@ -4,8 +4,14 @@ NODE_ENV=development
 APP_KEY=BPYQ8wQxr2I4CqiB_y-H7B3-V_WeeDKm
 DRIVE_DISK=local
 DB_CONNECTION=pg
+
 PG_HOST=localhost
 PG_PORT=5432
 PG_USER=lucid
 PG_PASSWORD=
 PG_DB_NAME=lucid
+
+SMTP_HOST=localhost
+SMTP_PORT=587
+SMTP_USERNAME=<username>
+SMTP_PASSWORD=<password>
