--- a/luby_cash/package.json
+++ b/luby_cash/package.json
@@ -29,6 +29,7 @@
     "@adonisjs/auth": "^8.0.9",
     "@adonisjs/core": "^5.3.0",
     "@adonisjs/lucid": "^16.1.0",
+    "@adonisjs/mail": "^7.2.4",
     "@adonisjs/repl": "^3.1.0",
     "kafkajs": "^1.15.0",
     "luxon": "^2.0.2",
