--- a/ms_validate/package.json
+++ b/ms_validate/package.json
@@ -4,7 +4,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts"
+    "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts",
+    "typeorm": "ts-node-dev node_modules/typeorm/cli.js",
+    "lint": "eslint . --ext=.ts",
+    "format": "prettier --write ."
   },
   "repository": {
     "type": "git",
@@ -20,14 +23,17 @@
     "express": "^4.17.1",
     "handlebars": "^4.7.7",
     "kafkajs": "^1.15.0",
+    "luxon": "^2.0.2",
     "nodemailer": "^6.6.5",
     "nodemailer-express-handlebars": "^4.0.0",
     "ts-node-dev": "^1.1.8",
+    "typeorm": "^0.2.37",
     "typescript": "^4.4.3",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/luxon": "^2.0.4",
     "@types/node": "^16.10.1",
     "@types/nodemailer": "^6.4.4",
     "@types/nodemailer-express-handlebars": "^4.0.1",
@@ -35,6 +41,7 @@
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "pg": "^8.7.1",
     "pino-pretty": "^7.0.1",
     "prettier": "^2.4.1"
   }
