--- a/ms_validate/package.json
+++ b/ms_validate/package.json
@@ -38,6 +38,7 @@
     "@types/nodemailer": "^6.4.4",
     "@types/nodemailer-express-handlebars": "^4.0.1",
     "@types/uuid": "^8.3.1",
+    "class-validator": "^0.13.1",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
