--- a/ms_validate/package.json
+++ b/ms_validate/package.json
@@ -26,7 +26,9 @@
     "luxon": "^2.0.2",
     "nodemailer": "^6.6.5",
     "nodemailer-express-handlebars": "^4.0.0",
+    "reflect-metadata": "^0.1.13",
     "ts-node-dev": "^1.1.8",
+    "tsyringe": "^4.6.0",
     "typeorm": "^0.2.37",
     "typescript": "^4.4.3",
     "uuid": "^8.3.2"
