--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -37,3 +37,20 @@ services:
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+
+  postgres:
+    container_name: postgres
+    image: postgres
+    restart: unless-stopped
+    volumes:
+      - postgres-data:/data
+    environment:
+      POSTGRES_USER: 'postgres'
+      POSTGRES_PASSWORD: '1579'
+    ports:
+      - '5432:5432'
+    expose:
+      - '5432'
+
+volumes:
+  postgres-data:
