--- a/luby_cash/package.json
+++ b/luby_cash/package.json
@@ -31,6 +31,7 @@
     "@adonisjs/lucid": "^16.1.0",
     "@adonisjs/mail": "^7.2.4",
     "@adonisjs/repl": "^3.1.0",
+    "@adonisjs/view": "^6.1.1",
     "kafkajs": "^1.15.0",
     "luxon": "^2.0.2",
     "pg": "^8.7.1",
